# trade-bot

./: .envrc.example  .gitignore  README.md  pyproject.toml
src/exchanges/hyperliquid/: README.md  __init__.py
src/exchanges/okcoin/: __init__.py  account_api.py  client.py  consts.py  exceptions.py  spot_api.py  utils.py  websocket.py
src/trade_bot/: __main__.py
