[project]
name = "trade-bot"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "mk1018", email = "ktmn1018@yahoo.co.jp" }
]
dependencies = [
    "websockets>=13.1",
    "requests>=2.32.3",
    "python-dateutil>=2.9.0.post0",
    "ruff>=0.7.2",
    "hyperliquid-python-sdk>=0.8.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
